pass var file to docker-compose.test

--- a/docker-compose.test.yaml
+++ b/docker-compose.test.yaml
@@ -5,7 +5,7 @@ services:
         context: .
         dockerfile: test.Dockerfile
     env_file:
-      - ../kdrive.env
+      - "${env.API_CONFIG_FILE}"
     ports:
       - '8080:8080'
     depends_on:
@@ -29,7 +29,7 @@ services:
   upload-service:
     image: 'bluehub.azurecr.io/meateam/upload-service:develop'
     env_file:
-      - ../kdrive.env
+      - "${env.API_CONFIG_FILE}"
     depends_on:
       - minio
     ports:
@@ -37,7 +37,7 @@ services:
   download-service:
     image: 'bluehub.azurecr.io/meateam/download-service:develop'
     env_file:
-      - ../kdrive.env
+      - "${env.API_CONFIG_FILE}"
     ports:
       - '8082:8080'
     depends_on:
@@ -45,7 +45,7 @@ services:
   file-service:
     image: 'bluehub.azurecr.io/meateam/file-service:develop'
     env_file:
-      - ../kdrive.env
+      - "${env.API_CONFIG_FILE}"
     ports:
       - '8083:8080'
     depends_on:
@@ -63,7 +63,7 @@ services:
     ports:
       - '8084:8080'
     env_file:
-      - ../kdrive.env
+      - "${env.API_CONFIG_FILE}"
     depends_on:
       - saml-idp
       - user-service
@@ -72,13 +72,13 @@ services:
     ports:
       - '8085:8080'
     env_file:
-      - ../kdrive.env
+      - "${env.API_CONFIG_FILE}"
   user-service:
     image: 'bluehub.azurecr.io/meateam/user-service:develop'
     ports:
       - '8086:8080'
     env_file:
-      - ../kdrive.env
+      - "${env.API_CONFIG_FILE}"
     depends_on:
       - mongo
       - redis
@@ -87,13 +87,13 @@ services:
     ports:
       - '8087:8080'
     env_file:
-      - ../kdrive.env
+      - "${env.API_CONFIG_FILE}"
     depends_on:
       - mongo
   search-service:
     image: bluehub.azurecr.io/meateam/search-service:develop
     env_file:
-      - ../kdrive.env
+      - "${env.API_CONFIG_FILE}"
     ports:
       - 8088:8080
     # depends_on: 
@@ -104,7 +104,7 @@ services:
   gotenberg-service:
     image: bluehub.azurecr.io/meateam/gotenberg:6
     env_file:
-      - ../kdrive.env
+      - "${env.API_CONFIG_FILE}"
     tmpfs:
       - /tmp
       - /gotenberg/tmp
@@ -113,7 +113,7 @@ services:
   spike-service:
     image: bluehub.azurecr.io/meateam/spike-service:latest
     env_file:
-      - ../kdrive.env
+      - "${env.API_CONFIG_FILE}"
     depends_on:
       - redis
     ports:
@@ -123,11 +123,11 @@ services:
     ports:
       - '8091:8080'
     env_file:
-      - ../kdrive.env
+      - "${env.API_CONFIG_FILE}"
   permit-service:
     image: bluehub.azurecr.io/meateam/permit-service:develop
     env_file:
-      - ../kdrive.env
+      - "${env.API_CONFIG_FILE}"
     ports:
       - 8092:8080
     depends_on:
