--- a/docker-compose.test.yaml
+++ b/docker-compose.test.yaml
@@ -25,19 +25,19 @@ services:
       MINIO_SECRET_KEY: 'BPlIUU6SX0ZxiCMo3tIpCMAUdnmkN9Eo9K42NsRR'
     command: server /data
   upload-service:
-    image: 'bluehub.azurecr.io/meateam/upload-service:develop'
+    image: 'drivehub.azurecr.io/meateam/upload-service:develop'
     depends_on:
       - minio
     ports:
       - '8081:8080'
   download-service:
-    image: 'bluehub.azurecr.io/meateam/download-service:develop'
+    image: 'drivehub.azurecr.io/meateam/download-service:develop'
     ports:
       - '8082:8080'
     depends_on:
       - minio
   file-service:
-    image: 'bluehub.azurecr.io/meateam/file-service:develop'
+    image: 'drivehub.azurecr.io/meateam/file-service:develop'
     ports:
       - '8083:8080'
     depends_on:
@@ -51,31 +51,31 @@ services:
     depends_on:
       - minio
   authentication-service:
-    image: 'bluehub.azurecr.io/meateam/authentication-service:develop'
+    image: 'drivehub.azurecr.io/meateam/authentication-service:develop'
     ports:
       - '8084:8080'
     depends_on:
       - saml-idp
       - user-service
   saml-idp:
-    image: 'bluehub.azurecr.io/meateam/test-saml-idp:latest'
+    image: 'drivehub.azurecr.io/meateam/test-saml-idp:latest'
     ports:
       - '8085:8080'
   user-service:
-    image: 'bluehub.azurecr.io/meateam/user-service:develop'
+    image: 'drivehub.azurecr.io/meateam/user-service:develop'
     ports:
       - '8086:8080'
     depends_on:
       - mongo
       - redis
   permission-service:
-    image: 'bluehub.azurecr.io/meateam/permission-service:develop'
+    image: 'drivehub.azurecr.io/meateam/permission-service:develop'
     ports:
       - '8087:8080'
     depends_on:
       - mongo
   search-service:
-    image: bluehub.azurecr.io/meateam/search-service:develop
+    image: drivehub.azurecr.io/meateam/search-service:develop
     ports:
       - 8088:8080
     # depends_on: 
@@ -84,24 +84,24 @@ services:
     depends_on: 
       - elasticsearch
   gotenberg-service:
-    image: bluehub.azurecr.io/meateam/gotenberg:6
+    image: drivehub.azurecr.io/meateam/gotenberg:6
     tmpfs:
       - /tmp
       - /gotenberg/tmp
     ports:
       - 8089:8080
   spike-service:
-    image: bluehub.azurecr.io/meateam/spike-service:latest
+    image: drivehub.azurecr.io/meateam/spike-service:latest
     depends_on:
       - redis
     ports:
       - '8090:8080'
   delegation-service:
-    image: bluehub.azurecr.io/meateam/delegation-service:develop
+    image: drivehub.azurecr.io/meateam/delegation-service:develop
     ports:
       - '8091:8080'
   permit-service:
-    image: bluehub.azurecr.io/meateam/permit-service:develop
+    image: drivehub.azurecr.io/meateam/permit-service:develop
     ports:
       - 8092:8080
     depends_on:
