--- a/docker-compose.test.yaml
+++ b/docker-compose.test.yaml
@@ -4,6 +4,8 @@ services:
     build:
         context: .
         dockerfile: test.Dockerfile
+    env_file:
+      - ../kdrive.env
     ports:
       - '8080:8080'
     depends_on:
@@ -25,19 +27,25 @@ services:
       MINIO_SECRET_KEY: 'BPlIUU6SX0ZxiCMo3tIpCMAUdnmkN9Eo9K42NsRR'
     command: server /data
   upload-service:
-    image: 'drivehub.azurecr.io/meateam/upload-service:develop'
+    image: 'bluehub.azurecr.io/meateam/upload-service:develop'
+    env_file:
+      - ../kdrive.env
     depends_on:
       - minio
     ports:
       - '8081:8080'
   download-service:
-    image: 'drivehub.azurecr.io/meateam/download-service:develop'
+    image: 'bluehub.azurecr.io/meateam/download-service:develop'
+    env_file:
+      - ../kdrive.env
     ports:
       - '8082:8080'
     depends_on:
       - minio
   file-service:
-    image: 'drivehub.azurecr.io/meateam/file-service:develop'
+    image: 'bluehub.azurecr.io/meateam/file-service:develop'
+    env_file:
+      - ../kdrive.env
     ports:
       - '8083:8080'
     depends_on:
@@ -51,31 +59,41 @@ services:
     depends_on:
       - minio
   authentication-service:
-    image: 'drivehub.azurecr.io/meateam/authentication-service:develop'
+    image: 'bluehub.azurecr.io/meateam/authentication-service:develop'
     ports:
       - '8084:8080'
+    env_file:
+      - ../kdrive.env
     depends_on:
       - saml-idp
       - user-service
   saml-idp:
-    image: 'drivehub.azurecr.io/meateam/test-saml-idp:latest'
+    image: 'bluehub.azurecr.io/meateam/test-saml-idp:latest'
     ports:
       - '8085:8080'
+    env_file:
+      - ../kdrive.env
   user-service:
-    image: 'drivehub.azurecr.io/meateam/user-service:develop'
+    image: 'bluehub.azurecr.io/meateam/user-service:develop'
     ports:
       - '8086:8080'
+    env_file:
+      - ../kdrive.env
     depends_on:
       - mongo
       - redis
   permission-service:
-    image: 'drivehub.azurecr.io/meateam/permission-service:develop'
+    image: 'bluehub.azurecr.io/meateam/permission-service:develop'
     ports:
       - '8087:8080'
+    env_file:
+      - ../kdrive.env
     depends_on:
       - mongo
   search-service:
-    image: drivehub.azurecr.io/meateam/search-service:develop
+    image: bluehub.azurecr.io/meateam/search-service:develop
+    env_file:
+      - ../kdrive.env
     ports:
       - 8088:8080
     # depends_on: 
@@ -84,24 +102,32 @@ services:
     depends_on: 
       - elasticsearch
   gotenberg-service:
-    image: drivehub.azurecr.io/meateam/gotenberg:6
+    image: bluehub.azurecr.io/meateam/gotenberg:6
+    env_file:
+      - ../kdrive.env
     tmpfs:
       - /tmp
       - /gotenberg/tmp
     ports:
       - 8089:8080
   spike-service:
-    image: drivehub.azurecr.io/meateam/spike-service:latest
+    image: bluehub.azurecr.io/meateam/spike-service:latest
+    env_file:
+      - ../kdrive.env
     depends_on:
       - redis
     ports:
       - '8090:8080'
   delegation-service:
-    image: drivehub.azurecr.io/meateam/delegation-service:develop
+    image: bluehub.azurecr.io/meateam/delegation-service:develop
     ports:
       - '8091:8080'
+    env_file:
+      - ../kdrive.env
   permit-service:
-    image: drivehub.azurecr.io/meateam/permit-service:develop
+    image: bluehub.azurecr.io/meateam/permit-service:develop
+    env_file:
+      - ../kdrive.env
     ports:
       - 8092:8080
     depends_on:
