--- a/docker-compose.test.yaml
+++ b/docker-compose.test.yaml
@@ -144,7 +144,7 @@ services:
     container_name: elasticsearch
     ports: ['9200:9200']
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9200"]
+      test: ["CMD", "curl", "-f", "http://127.0.0.1:9200"]
       interval: 5s
       timeout: 10s
       retries: 5
