--- a/docker-compose.test.yaml
+++ b/docker-compose.test.yaml
@@ -137,17 +137,38 @@ services:
     image: 'redis:alpine'
     ports:
       - '6379:6379'
+  # elasticsearch:
+  #   image: docker.elastic.co/elasticsearch/elasticsearch:7.5.0
+  #   environment: 
+  #     - discovery.type=single-node
+  #   container_name: elasticsearch
+  #   ports: ['9200:9200']
+  #   healthcheck:
+  #     test: ["CMD", "curl", "-f", "http://elasticsearch:9200"]
+  #     interval: 5s
+  #     timeout: 10s
+  #     retries: 5
+
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.5.0
-    environment: 
-      - discovery.type=single-node
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.4.0
     container_name: elasticsearch
-    ports: ['9200:9200']
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://elasticsearch:9200"]
-      interval: 5s
-      timeout: 10s
-      retries: 5
+    environment:
+      - xpack.security.enabled=false
+      - discovery.type=single-node
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+      nofile:
+        soft: 65536
+        hard: 65536
+    cap_add:
+      - IPC_LOCK
+    volumes:
+      - elasticsearch-data:/usr/share/elasticsearch/data
+    ports:
+      - 9200:9200
+      - 9300:9300
   kibana:
     image: docker.elastic.co/kibana/kibana:7.5.0
     container_name: kibana
