--- a/docker-compose.test.yaml
+++ b/docker-compose.test.yaml
@@ -174,3 +174,6 @@ services:
     container_name: kibana
     ports: ['5601:5601']
     depends_on: ['elasticsearch']
+volumes:
+  elasticsearch-data:
+    driver: local
