--- a/docker-compose.test.yaml
+++ b/docker-compose.test.yaml
@@ -149,31 +149,35 @@ services:
   #     timeout: 10s
   #     retries: 5
 
+      
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.4.0
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.5.2
     container_name: elasticsearch
     environment:
-      - xpack.security.enabled=false
-      - discovery.type=single-node
+      - node.name=elasticsearch
+      - cluster.name=es-docker-cluster
+      - cluster.initial_master_nodes=elasticsearch
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
     ulimits:
       memlock:
         soft: -1
         hard: -1
-      nofile:
-        soft: 65536
-        hard: 65536
-    cap_add:
-      - IPC_LOCK
     volumes:
-      - elasticsearch-data:/usr/share/elasticsearch/data
+      - data01:/usr/share/elasticsearch/data
     ports:
       - 9200:9200
-      - 9300:9300
+    networks:
+      - elastic
   kibana:
     image: docker.elastic.co/kibana/kibana:7.5.0
     container_name: kibana
     ports: ['5601:5601']
     depends_on: ['elasticsearch']
+
 volumes:
-  elasticsearch-data:
+  data01:
     driver: local
+networks:
+  elastic:
+    driver: bridge
