--- a/docker-compose.test.yaml
+++ b/docker-compose.test.yaml
@@ -137,47 +137,19 @@ services:
     image: 'redis:alpine'
     ports:
       - '6379:6379'
-  # elasticsearch:
-  #   image: docker.elastic.co/elasticsearch/elasticsearch:7.5.0
-  #   environment: 
-  #     - discovery.type=single-node
-  #   container_name: elasticsearch
-  #   ports: ['9200:9200']
-  #   healthcheck:
-  #     test: ["CMD", "curl", "-f", "http://elasticsearch:9200"]
-  #     interval: 5s
-  #     timeout: 10s
-  #     retries: 5
-
-      
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.5.2
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.5.0
+    environment: 
+      - discovery.type=single-node
     container_name: elasticsearch
-    environment:
-      - node.name=elasticsearch
-      - cluster.name=es-docker-cluster
-      - cluster.initial_master_nodes=elasticsearch
-      - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-    volumes:
-      - data01:/usr/share/elasticsearch/data
-    ports:
-      - 9200:9200
-    networks:
-      - elastic
+    ports: ['9200:9200']
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://elasticsearch:9200"]
+      interval: 5s
+      timeout: 10s
+      retries: 5
   kibana:
     image: docker.elastic.co/kibana/kibana:7.5.0
     container_name: kibana
     ports: ['5601:5601']
     depends_on: ['elasticsearch']
-
-volumes:
-  data01:
-    driver: local
-networks:
-  elastic:
-    driver: bridge
